kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: djncaptcha-tomcat
spec:
  selector:
    app: djncaptcha
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: djncaptcha-nginx
spec:
  selector:
    app: djncaptcha
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
